syntax = "proto3"; // ini adalah bahasa yang digunakan

option go_package = "./pb"; // ini untuk menentukan di mana hasil generate file .proto akan disimpan

package proto;  // ini optional, biasanya digunakan ketika ada lebih dari satu .proto file

message RequestMessage {
  string body = 1;
}

message ResponseMessage {
  string body = 1;
}

service ChatService {
  rpc SayHello(RequestMessage) returns (ResponseMessage) {}
}